--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,13 @@
 export(dtmvnorm_impsamp)
 export(dtmvnorm_impsamp_mv)
 export(gen_mog)
+export(give_ind)
 export(import_sampling)
 export(import_sampling_mv)
 export(import_sampling_norm)
+export(impute_gauss)
+export(impute_rej)
+export(ind_last_acc)
 export(mc_inter)
 export(nig)
 export(nig.post)
