--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,15 @@ export(dtmvnorm_impsamp)
 export(dtmvnorm_impsamp_mv)
 export(edit_log_prob)
 export(edit_pred_prob)
+export(edit_prob)
+export(fig_error_post)
+export(fig_numrejects)
+export(fig_pred_prob_beta)
+export(fig_pred_prob_gauss)
+export(func_perf_plot_beta)
+export(func_perf_plot_bvgauss)
+export(func_perf_plot_flowcyt)
+export(func_perf_plot_gauss)
 export(gen_mog)
 export(give_ind)
 export(import_sampling)
@@ -13,6 +22,7 @@ export(import_sampling_norm)
 export(impute_gauss)
 export(impute_rej)
 export(ind_last_acc)
+export(inf_gvhd)
 export(mc_inter)
 export(nig)
 export(nig.post)
@@ -23,5 +33,10 @@ export(post_pred_motgt)
 export(post_pred_motgt_mv)
 export(post_pred_tmogt)
 export(post_pred_tmogt_mv)
+export(prob_norm)
+export(updt_assgn_motg)
+export(updt_assgn_motgt)
+export(updt_assgn_tmogt)
 export(updt_params_component)
+export(updt_params_tmogt)
 export(updt_wghts)
